# deepagent-multiagent-skills-demo

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  coordinator.py  executor.py  planner.py  reviewer.py
agents/workflows/: __init__.py  coding_workflow.py  rag_workflow.py  research_workflow.py
skills/data-science/: SKILL.md
skills/devops/: SKILL.md
skills/planning-core/: SKILL.md
skills/shared/code-review/: SKILL.md
skills/shared/testing/: SKILL.md
skills/web-dev/: SKILL.md
tools/: __init__.py
